--- a/tp-webform-equipo-a1/tp-webform-equipo-a1/Master.Master
+++ b/tp-webform-equipo-a1/tp-webform-equipo-a1/Master.Master
@@ -23,10 +23,10 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="~/Index.aspx">Home</a>
+                                <a class="nav-link active" aria-current="page" href="Index.aspx">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Link</a>
+                                <a class="nav-link" href="Carrito.aspx">Carrito</a>
                             </li>
                         </ul>
                         <div class="d-flex" role="search">
