--- a/tp-webform-equipo-a1/tp-webform-equipo-a1/Master.Master
+++ b/tp-webform-equipo-a1/tp-webform-equipo-a1/Master.Master
@@ -14,16 +14,16 @@
 <body>
     <form id="form1" runat="server">
         <div>
-            <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <nav class="navbar navbar-expand-lg bg-body-tertiary navbar-bg-dark">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="~/Index.aspx">Carrito</a>
+                    <a class="navbar-brand" href="~/Index.aspx">ECommerce</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="Index.aspx">Home</a>
+                                <a class="nav-link active" aria-current="page" href="Index.aspx">Inicio</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="Carrito.aspx">Carrito</a>
