Agrego contador de articulos en el carrito
Agrego un label en la pagina master que muestra cuantos articulos diferentes hay en el carrito

--- a/tp-webform-equipo-a1/tp-webform-equipo-a1/Master.Master
+++ b/tp-webform-equipo-a1/tp-webform-equipo-a1/Master.Master
@@ -26,7 +26,9 @@
                                 <a class="nav-link active" aria-current="page" href="Index.aspx">Inicio</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="Carrito.aspx">Carrito</a>
+                                <a class="nav-link" href="Carrito.aspx">Carrito
+                                    <asp:Label ID="lblContador" class="badge text-bg-primary" runat="server">0</asp:Label>
+                                </a>
                             </li>
                         </ul>
                         <div class="d-flex" role="search">
