--- a/tp-webform-equipo-a1/tp-webform-equipo-a1/Master.Master
+++ b/tp-webform-equipo-a1/tp-webform-equipo-a1/Master.Master
@@ -16,9 +16,9 @@
 <body>
     <form id="form1" runat="server">
         <div>
-            <nav class="navbar navbar-expand-lg bg-body-tertiary navbar-bg-dark">
+            <nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark mb-5">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="~/Index.aspx">ECommerce</a>
+                    <a class="navbar-brand" href="/Index.aspx">ECommerce</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -33,10 +33,7 @@
                                 </a>
                             </li>
                         </ul>
-                        <div class="d-flex" role="search">
-                            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                            <asp:Button class="btn btn-outline-success" type="submit" runat="server" Text="Buscar"/>
-                        </div>
+                        
                     </div>
                 </div>
             </nav>
