--- a/tp-webform-equipo-a1/tp-webform-equipo-a1/Master.Master
+++ b/tp-webform-equipo-a1/tp-webform-equipo-a1/Master.Master
@@ -16,9 +16,9 @@
 <body>
     <form id="form1" runat="server">
         <div>
-            <nav class="navbar navbar-expand-lg bg-body-tertiary mb-2"  data-bs-theme="dark">
+            <nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark mb-5">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="/Index.aspx">E-Commerce</a>
+                    <a class="navbar-brand" href="/Index.aspx">ECommerce</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
