--- a/tp-webform-equipo-a1/tp-webform-equipo-a1/Master.Master
+++ b/tp-webform-equipo-a1/tp-webform-equipo-a1/Master.Master
@@ -9,7 +9,37 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="css/Style.css" rel="stylesheet" />
     <link href="css/font-awesome.min.css" rel="stylesheet" />
-
+    <style>
+        body {
+            display: flex;
+            min-height: 100vh;
+            flex-direction: column;
+        }
+        .wrapper {
+            display: flex;
+            flex: 1;
+        }
+        .sidebar {
+            width: 250px;
+            background-color: #f8f9fa;
+            padding: 20px;
+        }
+        .contenido {
+            flex: 1;
+            padding: 20px;
+        }
+        .filtro-precio {
+            display: flex;
+            align-items: center;
+        }
+        .filtro-precio input {
+            width: 45%;
+            margin-right: 5px;
+        }
+        .filtro-precio span {
+            margin: 0 5px;
+        }
+    </style>
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
@@ -37,11 +67,13 @@
                     </div>
                 </div>
             </nav>
-        </div>
         <div>
-            <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
-            </asp:ContentPlaceHolder>
+            
+                <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server" />
+
         </div>
+                    
+
     </form>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
