mejoras en el codigo, validaciones

--- a/tp-webform-equipo-a1/tp-webform-equipo-a1/css/Style.css
+++ b/tp-webform-equipo-a1/tp-webform-equipo-a1/css/Style.css
@@ -3,7 +3,14 @@
 }
 
 
- .txtCantidad{
-    width: 5% ;
+.txtCantidad {
+    width: 5%;
 }
 
+
+#imgDetallePrincipal {
+    width: 400px;
+    height: 400px;
+    object-fit: cover;
+    overflow: hidden;
+}
